# ECE-Sprits

./: .gitignore  CMakeLists.txt  ECE-Sprits.cbp  README.md  capacities.c  circular_menu.c  collisions.c  config  config.c  fmod.c  game.c  init.c  level.c  line_tracking.c  main.c  memory.c  menu.c  objects.c  physics.c  popup_menu.c  save.c
inc/: capacities.h  circular_menu.h  collisions.h  config.h  fmod.h  game.h  init.h  level.h  line_tracking.h  memory.h  menu.h  objects.h  physics.h  popup_menu.h  save.h  structures.h
niveau1/: level
niveau2/: level
niveau3/: level
polices/: droidsans_12_mono.pcx  droidsans_28_mono.pcx  midnight_28_mono.pcx
saves/: saves
